Added Shape and Square classes

--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -206,6 +206,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Color.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CompetitionBetweenSpeciesNoK.cpp"
 				>
 			</File>
@@ -294,6 +298,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Shape.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Square.cpp"
+				>
+			</File>
+			<File
 				RelativePath="TimeSeriesObservations.cpp"
 				>
 			</File>
@@ -303,6 +315,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Color.h"
+				>
+			</File>
 			<File
 				RelativePath="CompetitionModuleBetweenGroup.h"
 				>
@@ -433,6 +449,14 @@
 			</File>
 			<File
 				RelativePath="PredationModuleTypeIII.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Shape.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Square.h"
 				>
 			</File>
 			<File
