added Color, Triangle, Circle classes

--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -206,6 +206,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Circle.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Color.cpp"
 				>
 			</File>
@@ -309,12 +313,20 @@
 				RelativePath="TimeSeriesObservations.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\Triangle.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Circle.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Color.h"
 				>
@@ -461,6 +473,10 @@
 			</File>
 			<File
 				RelativePath="TimeSeriesObservations.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Triangle.h"
 				>
 			</File>
 			<File
