--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -246,7 +246,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GraphMarker.cpp"
+				RelativePath=".\ChartPoint.cpp"
 				>
 			</File>
 			<File
@@ -392,7 +392,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GraphMarker.h"
+				RelativePath=".\ChartPoint.h"
 				>
 			</File>
 			<File
