added ChangeSlider class to display the amount a slider has been dragged

--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -206,6 +206,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ChangeSlider.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Chart.cpp"
 				>
 			</File>
@@ -355,6 +359,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\ChangeSlider.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Chart.h"
 				>
