--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -334,6 +334,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\PlotBySpeciesManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PlotManager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Point.cpp"
 				>
 			</File>
@@ -363,6 +371,10 @@
 			</File>
 			<File
 				RelativePath=".\Shape.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\SingleSpeciesLineChart.cpp"
 				>
 			</File>
 			<File
@@ -568,6 +580,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\PlotBySpeciesManager.h"
+				>
+			</File>
+			<File
 				RelativePath=".\PlotManager.h"
 				>
 			</File>
@@ -604,6 +620,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SingleSpeciesLineChart.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Slider.h"
 				>
 			</File>
@@ -624,11 +644,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
