added InteractionArc which I forgot to add the other day; added Pickable abstract class for picking of arcs and chart points; changed ChartPoint to extend Pickable

--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -584,6 +584,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Pickable.h"
+				>
+			</File>
+			<File
 				RelativePath=".\PlotByGroupManager.h"
 				>
 			</File>
